--- a/globals.css
+++ b/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'react-notion-x/src/styles.css';
+@import 'prismjs/themes/prism-tomorrow.css'; /* optional: code block theme */
 
 html {
   scroll-behavior: smooth;
